--- a/03 - Stats preview card component/style.css
+++ b/03 - Stats preview card component/style.css
@@ -79,6 +79,7 @@ body {
 @media (min-width: 1146px) {
     .card{
         height: 45vh;
+		min-height: 450px;
         max-height: 500px;
         display: flex;
         width: 50%;
